--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               <label class="col-xs-2 control-label">Tenant</label>
               <div class="col-xs-10">
                 <input id="tenant-input" class="form-control" type="text" placeholder="fadydev.auth0.com"
-                  value="acme-demo.auth0.com" />
+                  value="dev-ng.us.auth0.com" />
               </div>
             </div>
 
@@ -53,7 +53,7 @@
               <label class="col-xs-2 control-label">Client ID</label>
               <div class="col-xs-10">
                 <input id="client-id-input" class="form-control" type="text"
-                  placeholder="Enter the client ID for your device app..." value="nZ8JDrV8Hklf3JumewRl2ke3ovPZn5Ho" />
+                  placeholder="Enter the client ID for your device app..." value="wH7fDysijaNYwLOPxqV6sIjWR7hn58yF" />
               </div>
             </div>
 
@@ -61,7 +61,7 @@
               <label class="col-xs-2 control-label">Audience</label>
               <div class="col-xs-10">
                 <input id="audience-input" class="form-control" type="text"
-                  placeholder="Enter an audience (optional)..." value="urn:my-videos" />
+                  placeholder="Enter an audience (optional)..." value="https://hello-world.example.com" />
               </div>
             </div>
 
@@ -97,19 +97,19 @@
 
           <section id="authorize-screen" class="screen jumbotron">
             <img style="width: 64px; height: auto;"
-              src="https://cdn.auth0.com/styleguide/components/1.0.8/media/logos/img/badge.svg" />
-            <h1>AuthU TV</h1>
-            <p>Start streaming content from AuthU directly on your smart TV! Get started by authorizing with your
-              AuthU
+              src="https://www.neuroglee.com/static/media/logo.be5bbf95.svg" />
+            <h1>Neuroglee Patient App</h1>
+            <p>Get started by authorizing with your
+              Neuroglee Patient
               account.</p>
             <div id="authorize-btn" class="btn btn-success btn-lg">Authorize</div>
           </section>
 
           <section id="exchange-screen" class="screen jumbotron">
             <img style="width: 64px; height: auto;"
-              src="https://cdn.auth0.com/styleguide/components/1.0.8/media/logos/img/badge.svg" />
-            <h1>AuthU TV</h1>
-            <p>To activate this smart TV to stream directly from AuthU TV</p>
+              src="https://www.neuroglee.com/static/media/logo.be5bbf95.svg" />
+            <h1>Neuroglee Patient App</h1>
+            <p>To Link your device with Patient App(..customizable)</p>
             <ol>
               <li>
                 On your computer or mobile device, go to: <a id="tenant-activation-link" href="" target="_blank"></a>
